--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,28 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<h1>Tempalte</h1>
+
 {% endblock %}
 
 {% block body %}
+<div class="content">
+    <h1>Task Master</h1>
 
+    <table style="width:50%">
+        <tr>
+            <th>Task</th>
+            <th>Added</th>
+            <th>Actions</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                <a href="">Delete</a>
+                <a href="">Update</a>
+            </td>
+        </tr>
+    </table>
+
+</div>
 {% endblock %}
