--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 <div class="content">
     <h1>Task Master</h1>
 
+    {%if tasks|length < 1%}
+    <h4>There are no tasks. Create one below!</h4>
+    {% else %}
+
     <table style="width:50%">
         <tr>
             <th>Task</th>
@@ -19,12 +23,14 @@
                 <td> {{ task.content }} </td>
                 <td> {{ task.date_created.date() }} </td>
                 <td>
-                    <a href="">Delete</a>
-                    <a href="">Update</a>
+                    <a href="/delete/{{task.id}}">Delete</a>
+                    <br>
+                    <a href="/update/{{task.id}}">Update</a>
                 </td>
             </tr>
          {% endfor %}
     </table>
+    {% endif %}
 
     <form action="/" method="POST">
         <input type ="text" name="content" id="content">
